--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
       <nav>
         <ul>
           <li>
-            <a class="link current" href="./index.html">Студия</a>
+            <a class="nav-link current" href="./index.html">Студия</a>
           </li>
-          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a class="header-link-address" href="mailto:info@devstudio.com"
+          <a class="header-link-contact" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="header-link-address" href="tel:+380961111111"
+          <a class="header-link-contact" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -45,40 +45,40 @@
       <!--Шапка-->
       <section class="hero">
         <div>
-          <h1 class="hero-text">
+          <h1 class="hero-title">
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
+          <button class="primary-button" type="button">Заказать услугу</button>
         </div>
       </section>
       <!--Особенности-->
       <section>
-        <ul class="features">
+        <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="item-title">Внимание к деталям</h3>
+            <p class="item-discription">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="item-title">Пунктуальность</h3>
+            <p class="item-discription">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="item-title">Планирование</h3>
+            <p class="item-discription">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="item-title">Современные технологии</h3>
+            <p class="item-discription">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -87,7 +87,7 @@
       </section>
       <!--Чем мы занимаемся-->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="main-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./images/box1.jpg" alt="Руки на клавиатуре" width="370" />
@@ -101,28 +101,28 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section class="team">
-        <h2>Наша команда</h2>
+      <section class="team-list">
+        <h2 class="main-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Парень" width="270" />
-            <h3 class="title">Игорь Демьяненко</h3>
-            <p class="direction" lang="en">Product Designer</p>
+            <h3 class="team-member">Игорь Демьяненко</h3>
+            <p class="position-member" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/img1.jpg" alt="Девушка" width="270" />
-            <h3 class="title">Ольга Репина</h3>
-            <p class="direction" lang="en">Frontend Developer</p>
+            <h3 class="team-member">Ольга Репина</h3>
+            <p class="position-member" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="Парень" width="270" />
-            <h3 class="title">Николай Тарасов</h3>
-            <p class="direction" lang="en">Marketing</p>
+            <h3 class="team-member">Николай Тарасов</h3>
+            <p class="position-member" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Парень" width="270" />
-            <h3 class="title">Михаил Ермаков</h3>
-            <p class="direction" lang="en">UI Designer</p>
+            <h3 class="team-member">Михаил Ермаков</h3>
+            <p class="position-member" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -138,7 +138,7 @@
           <ul>
             <li>
               <a
-                class="footer-link-map"
+                class="link-map"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -146,12 +146,12 @@
               >
             </li>
             <li>
-              <a class="footer-link-address" href="mailto:info@devstudio.com"
+              <a class="footer-link-contact" href="mailto:info@devstudio.com"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a class="footer-link-address" href="tel:+380961111111"
+              <a class="footer-link-contact" href="tel:+380961111111"
                 >+38 099 111 11 11</a
               >
             </li>
