--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,22 @@
       <nav>
         <ul>
           <li>
-            <a class="link" href="./index.html">Студия</a>
+            <a class="nav-link" href="./index.html">Студия</a>
           </li>
-          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li>
+            <a class="nav-link current" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a class="header-link-address" href="mailto:info@devstudio.com"
+          <a class="header-link-contact" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="header-link-address" href="tel:+380961111111"
+          <a class="header-link-contact" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -45,11 +47,19 @@
       <!--Шапка-->
       <div>
         <ul>
-          <li><button class="button" type="button">Все</button></li>
-          <li><button class="button" type="button">Веб-сайты</button></li>
-          <li><button class="button" type="button">Приложения</button></li>
-          <li><button class="button" type="button">Дизайн</button></li>
-          <li><button class="button" type="button">Маркетинг</button></li>
+          <li><button class="secondary-button" type="button">Все</button></li>
+          <li>
+            <button class="secondary-button" type="button">Веб-сайты</button>
+          </li>
+          <li>
+            <button class="secondary-button" type="button">Приложения</button>
+          </li>
+          <li>
+            <button class="secondary-button" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="secondary-button" type="button">Маркетинг</button>
+          </li>
         </ul>
       </div>
       <section>
@@ -61,34 +71,38 @@
                 alt="Экран ноутбука с фото"
                 width="370"
             /></a>
-            <h3 class="title-port">Технокряк</h3>
-            <p class="direction-port">Веб-сайт</p>
+            <h3 class="pitfolio-item-title">Технокряк</h3>
+            <p class="portfolio-item-discription">Веб-сайт</p>
           </li>
           <li>
             <a href="">
               <img
                 src="./images/img5.jpg"
-                alt="Баслетболисты с мячём"
+                alt="Баскетболисты с мячём"
                 width="370"
             /></a>
-            <h3 class="title-port">
+            <h3 class="pitfolio-item-title">
               Постер<span lang="en">Orlean vs Golden Star</span>
             </h3>
-            <p class="direction-port">Дизайн</p>
+            <p class="portfolio-item-discription">Дизайн</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img6.jpg" alt="Эмблема ресторана" width="370"
             /></a>
-            <h3 class="title-port">Ресторан<span lang="en">Seafood</span></h3>
-            <p class="direction-port">Приложение</p>
+            <h3 class="pitfolio-item-title">
+              Ресторан<span lang="en">Seafood</span>
+            </h3>
+            <p class="portfolio-item-discription">Приложение</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img7.jpg" alt="Наушники" width="370"
             /></a>
-            <h3 class="title-port">Проект<span lang="en">Prime</span></h3>
-            <p class="direction-port">Маркетинг</p>
+            <h3 class="pitfolio-item-title">
+              Проект<span lang="en">Prime</span>
+            </h3>
+            <p class="portfolio-item-discription">Маркетинг</p>
           </li>
           <li>
             <a href="">
@@ -97,27 +111,31 @@
                 alt="Две коробки с надписями"
                 width="370"
             /></a>
-            <h3 class="title-port">Проект<span lang="en">Boxes</span></h3>
-            <p class="direction-port">Приложение</p>
+            <h3 class="pitfolio-item-title">
+              Проект<span lang="en">Boxes</span>
+            </h3>
+            <p class="portfolio-item-discription">Приложение</p>
           </li>
           <li>
             <a href="">
               <img
                 src="./images/img9.jpg"
-                alt="Экран монирора с страницей"
+                alt="Экран монитора с страницей"
                 width="370"
             /></a>
-            <h3 class="title-port" lang="en">Inspiration has no Borders</h3>
-            <p class="direction-port">Веб-сайт</p>
+            <h3 class="pitfolio-item-title" lang="en">
+              Inspiration has no Borders
+            </h3>
+            <p class="portfolio-item-discription">Веб-сайт</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img10.jpg" alt="Открытая книга" width="370"
             /></a>
-            <h3 class="title-port">
+            <h3 class="pitfolio-item-title">
               Издание<span lang="en">Limited Edition</span>
             </h3>
-            <p class="direction-port">Дизайн</p>
+            <p class="portfolio-item-discription">Дизайн</p>
           </li>
           <li>
             <a href="">
@@ -126,8 +144,10 @@
                 alt="Лейба прямоугольная фон белый"
                 width="370"
             /></a>
-            <h3 class="title-port">Проект<span lang="en">LAB</span></h3>
-            <p class="direction-port">Маркетинг</p>
+            <h3 class="pitfolio-item-title">
+              Проект<span lang="en">LAB</span>
+            </h3>
+            <p class="portfolio-item-discription">Маркетинг</p>
           </li>
           <li>
             <a href="">
@@ -136,8 +156,8 @@
                 alt="Руки на клавиатуре ноутбука"
                 width="370"
             /></a>
-            <h3 class="title-port" lang="en">Growing Business</h3>
-            <p class="direction-port">Приложение</p>
+            <h3 class="pitfolio-item-title" lang="en">Growing Business</h3>
+            <p class="portfolio-item-discription">Приложение</p>
           </li>
         </ul>
       </section>
@@ -153,7 +173,7 @@
           <ul>
             <li>
               <a
-                class="footer-link-map"
+                class="link-map"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -161,12 +181,12 @@
               >
             </li>
             <li>
-              <a class="footer-link-address" href="mailto:info@devstudio.com"
+              <a class="footer-link-contact" href="mailto:info@devstudio.com"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a class="footer-link-address" href="tel:+380961111111"
+              <a class="footer-link-contact" href="tel:+380961111111"
                 >+38 099 111 11 11</a
               >
             </li>
